# BuptManus

./: .dockerignore  .env.example  0.py  Dockerfile  README.md  README_zh.md  docker-compose.yml  entrypoint.sh  init_db.py  pic_main.py  pyproject.toml  reset_database.py  server.py  start_mcp_server.py
data/: chat_history.db  initiate_datta.py
docs/: event-stream-protocol
src/: database.py  workflow.py
src/agents/: __init__.py  agents.py
src/api/: app.py
src/config/: __init__.py  agents.py  env.py
src/daily-tools-mcp/: daily_tools_mcp_server.py  manage_tools.py
src/daily-tools-mcp/tools/: base_tool.py  logistics_tool.py
src/daily_tools_mcp/: daily_tools_mcp_server.py
src/daily_tools_mcp/tools/: __init__.py  base_tool.py  logistics_tool.py  weather.py  weather_tool.py
src/data/: experience_log.json
src/desktop_agent/: README.md
src/desktop_agent/aiagent/: main.py  ui_extraction.py
src/desktop_agent/backend/: api_test.py  create_default_user.py  init_db.py
src/desktop_agent/backend/utils/: ai_prompts.py  auth.py  default_user.py  llm_provider.py
src/graph/: builder.py  nodes.py  types.py
src/models/: __init__.py  chat.py
src/prompts/: coordinator.md  desktop.md  human_in_the_loop.md  kuaidi.md  life_tools.md  planner.md  supervisor.md  template.py
src/service/: chat_service.py  workflow_service.py
src/tools/: __init__.py  bash_tool.py  browser.py  desktop_interaction.py  kuaidi_tool.py  langchain_wrappers.py  mcp_tools.py  package_manager.py  python_repl.py
tests/integration/: test_browser.py
webui/: .dockerignore  Dockerfile  READMEnew.md  package.json  pnpm-lock.yaml  tailwind.config.ts
webui/src/app/: layout.tsx  page.tsx
webui/src/app/_components/: AppHeader.tsx  ChatHistoryModal.tsx  DarkModeToggle.tsx  HistoryPanel.tsx  InputBox.tsx  MessageHistoryView.tsx  ParticlesBackground.tsx  SessionList.tsx  SettingsPanel.tsx  UserGuide.tsx  WorkflowProgressView.tsx
webui/src/core/api/: chat.ts  mock.ts  sessions.ts
webui/src/core/messaging/: types.ts
webui/src/styles/: globals.css
(+13 files in other folders)
