[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Bupt-manus"
version = "0.1.0"
description = "Bupt-Manus project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "browser-use>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "yfinance>=0.2.54",
    "langchain-deepseek>=0.1.2",
    "mcp>=1.11.0",
    "sqlalchemy>=2.0.38",
    "ReportLab>=4.4.3",
    "pdfkit>=1.0.0",

    # --- Desktop Agent Dependencies Start ---
    "requests",         # For making HTTP requests in the agent
    "Pillow",           # For image processing (screenshots)
    "pyautogui",        # For GUI automation (mouse, keyboard)
    "mss",              # For taking screenshots
    "pyperclip",        # For clipboard access
    "websockets",       # Likely for real-time communication
    "psutil",           # For system process information

    # Platform-specific dependencies for Windows
    "pywin32; sys_platform == 'win32'",
    "uiautomation; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
